k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-ms
  namespace: vehicle-platform
  labels:
    app: vehicle-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle-ms
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: vehicle-ms
    spec:
      containers:
        - name: vehicle-ms
          image: vehiclemsjava.azurecr.io/vehicle-ms:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
