k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-ms-service
  namespace: vehicle-platform
  labels:
    app: vehicle-ms
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: vehicle-ms
